--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Flask==2.1.3
+Flask==1.1.4
 SQLAlchemy==1.4
 flask-restx==0.5.1
 psycopg2==2.9.1
 markupsafe==1.1.1
+flasgger==0.9.5
+Werkzeug==1.0.1
+
 
 
